2006-09-30 Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, lib/system-gschemrc.in, src/g_hook.c, 
	  src/g_register.c, src/gschem.c, src/x_window.c:
	  Added a new scheme function to get the objects in a page.
	  Improved the new-page-hook in system-gschemrc so it only adds
	  the titleblock if the page has no objects.

2006-09-28 Carlos Nieves Onega <cnieves@iespana.es>

	* include/globals.h, include/prototype.h, lib/system-gschemrc.in,
	  src/g_hook.c, src/g_register.c, src/globals.c, src/gschem.c,
	  src/i_callbacks.c, src/x_window.c:
	  Added a new page hook, a new add-component function for scheme,
	  and some lines in the system-gschemrc file (commented by default),
	  so gschem can add automatically a symbol when creating a new page.
	  Commenting out these lines can solven bug #1443806 (gschem 
	  zoomed out way to much on startup).
	
2006-09-24 Ales Hvezda   <ahvezda@geda.seul.org>

        * AUTHORS: Greatly simplified the file since the ChangeLog tracks
	who has changed what.  Also added a few missing names that should
	most certainly be in the list.  Also consolidated all AUTHOR files
	for gEDA/gaf into this file.

2006-09-24 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Tweaked glib detection to not fail ./configure 
        when gdlib is not installed.  gdlib is an optional dependancy.

2006-09-24 03:57  Dan McMahill <danmc>

	* configure.ac: Improve gdlib detection.  Now instead of just
	  dropping gd support if gdlib is not found, have configure error
	  out with a message that tells the user what needs to be fixed or
	  what feature will be missing if --disable-gd is used.

	  Also add a variable to libgeda.pc.in so pkg-config can determine
	  if libgeda was compiled with gdlib support.  This makes
	  determination of this by gschem more robust.

2006-09-23  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/x_fileselect.c (x_fileselect_save): Modified to set filename
	when saving a page.
