@@ -519,12 +519,13 @@ SCM g_add_component(SCM page_smob, SCM scm_comp_name, SCM scm_x, SCM scm_y,
     }
     clib = (gchar*)clibs->data;
 
-    new_object = o_complex_add(w_current, 
-			       page->object_tail, 'C', 
-			       WHITE, 
-			       x, y, 
-			       angle, mirror,
-			       clib, comp_name, selectable, FALSE);
+    new_object = page->object_tail = o_complex_add(w_current, 
+			                           page->object_tail, 'C', 
+			                           WHITE, 
+			                           x, y, 
+			                           angle, mirror,
+			                           clib, comp_name, 
+                                                   selectable, FALSE);
     
     /* Now the new component should be added to the object's list and 
        drawn in the screen */
